[package]
name = "bengbenge"
version = "0.3.1"
edition = "2018"
rust-version = "1.56"
authors = ["Jimmy Moon <ragingwind@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["bengbenge", "utility", "router", "dns", "round-robin"]
description = "Simple inifity array for round-robin dns, beng, beng."
homepage = "https://github.com/ragingwind/rust-bengbenge"
documentation = "https://github.com/ragingwind/rust-bengbenge"
repository = "https://github.com/ragingwind/rust-bengbenge"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
